# curso_fastapi

./: .dockerignore  .gitignore  README.md  compose.yaml  fly.toml  pyproject.toml  trigger_gha.ipynb
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci-pipeline-dev.yaml  ci-pipeline-prod.yaml  ci-pipeline.yaml  prevent-notebook-output.yml
fast_zero/: app.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todo.py  users.py
fast_zero/static/: index.html
migrations/: env.py
migrations/versions/: 81ee8c014e04_create_todos_table.py  a712e713e990_update_tables_to_include_updated_at_.py  dedeb74955d8_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_rate_limit.py  test_security.py  test_todo.py  test_users.py
